# CalendarDIFF

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  BACKEND_AGENT_WORKFLOW.md  BACKEND_FAMILY_ID_INVARIANT_AGENT_PROMPT.md  BACKEND_FAMILY_ID_INVARIANT_AGENT_REPORT.md  BACKEND_FAMILY_ID_INVARIANT_SPEC.md  BACKEND_OPENAPI_SNAPSHOT_REGEN_AGENT_PROMPT.md  BACKEND_OPENAPI_SNAPSHOT_REGEN_AGENT_REPORT.md  BACKEND_OPENAPI_SNAPSHOT_REGEN_SPEC.md  BACKEND_REMOVE_LINK_ALERT_LAYER_AGENT_PROMPT.md  BACKEND_REMOVE_LINK_ALERT_LAYER_AGENT_REPORT.md  BACKEND_REMOVE_LINK_ALERT_LAYER_SPEC.md  BACKEND_UNRESOLVED_TRANSITION_AGENT_PROMPT.md  BACKEND_UNRESOLVED_TRANSITION_AGENT_REPORT.md  BACKEND_UNRESOLVED_TRANSITION_SPEC.md  DATA_FLOW_HARDENING_AGENT_PROMPT.md  DATA_FLOW_HARDENING_SPEC.md  Dockerfile  ENTITY_FIRST_SEMANTIC_SPEC.md  FAMILY_LABEL_AUTHORITY_AGENT_PROMPT.md  FAMILY_LABEL_AUTHORITY_SPEC.md  FUTURE_ARCH_OPTIMIZATION_AGENT_PROMPT.md  FUTURE_ARCH_OPTIMIZATION_SPEC.md  PURPOSE.md  README.md  README.zh-CN.md  RESPONSES_API_AGENT_PROMPT.md  RESPONSES_API_MIGRATION_SPEC.md  SEMANTIC_CLEANUP_AGENT_PROMPT.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  stage.md
.playwright/: cli.config.json
app/: main.py  service_app.py  state.py
docs/: README.md  agent_api_layering_spec.md  agent_claw_closeout.md  agent_live_eval_plan.md  agent_rollout_todo.md  api_consistency_test_plan.md  api_layering_contract.md  api_surface_current.md  api_surface_target.md  architecture.md  calendar_parser_removed_pending_llm.md  claw_smoke_runbook.md  (+26 more)
(+1370 files in other folders)
